--- a/CFSM_WEB/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/CFSM_WEB/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -191,7 +191,7 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item nav-profile">
-                        <a href="#" class="nav-link">
+                        <a asp-controller="HomeAdmin" asp-action="ProfileNhanVien" asp-area="admin" class="nav-link">
                             <div class="nav-profile-image">
                                 <img src="~/LayoutAdmin/assets/images/faces/face1.jpg" alt="profile">
                                 <span class="login-status online"></span>
